<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">@string/fdp</string>
    <string name="farm_development_plan">FarmGrow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="start_by_swiping_left">Start by swiping left.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="full_name_error">Please enter full name</string>
    <string name="account_type">org.grameen.fdp.login</string>
    <string name="app_package">org.grameen.fdp</string>
    <string name="welcome">Welcome %s</string>
    <string name="logout_button">Logout</string>
    <string name="fetch_contacts_button">Fetch Contacts</string>
    <string name="fetch_accounts_button">Fetch Accounts</string>
    <string name="clear_button">Clear</string>
    <string name="edit_farmer_details">Edit Farmer Details</string>
    <string name="add_farmer_details">Add Farmer Details</string>
    <string name="save_data">Save data</string>
    <string name="save_data_explanation">Do you want to save your current data before exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="new_farmer_added">New Farmer added!</string>
    <string name="new_farmer_not_added">Could not add farmer info. Please try again.</string>
    <string name="farmer_updated">Farmer data updated successfully!</string>
    <string name="could_not_save">Could not save farmer</string>
    <string name="try_again_suffix">. Please try again</string>
    <string name="permission_required">Permission required</string>
    <string name="camera_permission_rationale">Please provide camera permission to be able to take pictures</string>
    <string name="enter_valid_plot_name">Please enter a valid plot name</string>
    <string name="edit_plot">Edit plot details</string>
    <string name="add_new_plot">Add a new plot</string>
    <string name="provide_plot_name">Please provide the plot name</string>
    <string name="new_plot_added">New plot added</string>
    <string name="data_saved">Data saved successfully.</string>
    <string name="data_not_saved">Could not save data.</string>
    <string name="generic_error">An error has occurred</string>
    <string name="could_not_add_plot">Could not add plot info. Please try again</string>
    <string name="new_data_updated">The data has been updated.</string>
    <string name="add_plot_monitoring">Add new plot monitoring</string>
    <string name="edit_plot_monitoring">Edit Plot </string>
    <string name="error_total_plot_estimated_production">Total Plots estimated production is more than total farm production!</string>
    <string name="error_invalid_units">Invalid units provided for plot production sizes!</string>
    <string name="error_missing_estimated_production">Total Farm Production or Plot production was not provided!</string>
    <string name="year">Year</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="activities">Activities</string>
    <string name="supplies">Supplies Cost</string>
    <string name="labour">Labour Cost</string>
    <string name="family_members">Family Members</string>
    <string name="farmer_details">Farmer Profile</string>
    <string name="plot_monitoring" tools:ignore="MissingTranslation">Plot Monitoring</string>
    <string name="error_getting_farmer_info">There was an error attempting to retrieve farmer info</string>
    <string name="fill_data">Enter data</string>
    <string name="enter_data_rationale">"Please enter number of family members in Farmer Profile form for "</string>
    <string name="before_proceed_suffux"> before proceeding.</string>
    <string name="no_access_to_pl">No access to P &amp; L</string>
    <string name="and"> and </string>
    <string name="enter_all_ao_data">Please enter all Adoption Observation and Plot Info values for </string>
    <string name="missing_data">Missing data</string>
    <string name="no_plots">No Plots Added!</string>
    <string name="add_plot_to_access_pl">Please add a plot to access P and L.</string>
    <string name="farm_result">Farm Result</string>
    <string name="incomplete_ao_monitoring">Incomplete AO monitoring</string>
    <string name="different_no_monitoring">Different number of monitoring for plots</string>
    <string name="ensure_farm_acre_equal">Please ensure that total farm acreage is equal to total acreage of all plots!</string>
    <string name="fill_in_plot_size_values">Please fill in values for farm size and all plot sizes!</string>
    <string name="monitoring_for_year">Monitoring for Year</string>
    <string name="for_"> for </string>
    <string name="incorrect_no_plots_suffix">\'s plots are not equal.\\nPlease make sure all plots have the same number of monitoring!</string>
    <string name="farmer">Farmer </string>
    <string name="no_monitoring_added"> has no monitoring added for Year </string>
    <string name="please_add_monitoring_suffix">.\nPlease add at least 1 monitoring before proceeding.</string>
    <string name="no_plots_added_suffix">has no plots added! Please add at least 1 plot before proceeding</string>
    <string name="incomplete_monitoring_prefix">Some plots have incomplete AO Monitoring results for Year</string>
    <string name="incomplete_monitoring_suffix">.
        Please make sure all plot monitoring are complete for the specified year</string>
    <string name="back">Back</string>
    <string name="provide_all_permissions">Provide Permissions</string>
    <string name="provide_all_permissions_rationale">All permissions are needed for FDP to work properly</string>
    <string name="quit">Quit</string>
    <string name="select_country_region">Please Select a Country/Region</string>
    <string name="hey_there">Hi there!</string>
    <string name="sync">Sync</string>
    <string name="sync_all" translatable="false">Sync All</string>
    <string name="sync_anyway">Sync anyway</string>
    <string name="first_sign_in_rationale">Looks like this is your first sign in.
        "Since you have internet connection it's recommended you sync data from the server.</string>
    <string name="incomplete_ao_rational">Please complete Diagnostic Adoption Observation for Plot </string>
    <string name="plot_info">Plot Info</string>
    <string name="getting_data">Getting data</string>
    <string name="sending_data">Uploading records</string>
    <string name="please_wait">Please wait a moment…</string>
    <string name="network_error">No internet!</string>
    <string name="network_error_rational">You have no internet access! Please connect to a network and try again.</string>
    <string name="connection_error">"An error has occurred. Please try again :("</string>
    <string name="update_questions_data">Updating questions data</string>
    <string name="could_not_connect">Could not connect</string>
    <string name="could_not_connect_rationale">There might be a problem with your connection. Please check and try again.!</string>
    <string name="all_resources_downloaded">All resources downloaded successfully!</string>
    <string name="all_data_downloaded">All data downloaded successfully!</string>
    <string name="download_all_farmer_data">Do you want to download farmer data?</string>
    <string name="download_farmer_data">Download farmers data</string>
    <string name="download_complete">Data download Complete</string>
    <string name="getting_skip_logic">Obtaining Skip Logic data</string>
    <string name="getting_recommendations">Obtaining Recommendations data</string>
    <string name="getting_more">Getting more data</string>
    <string name="getting_even_more">Getting even more data</string>
    <string name="getting_final_data">Getting the last bit of other data</string>
    <string name="getting_logic">Obtaining Logic data</string>
    <string name="getting_cc">Syncing all Complex calculations data</string>
    <string name="getting_c">Syncing all Calculations data</string>
    <string-array name="months">
        <item name="1">January</item>
        <item name="2">February</item>
        <item name="3">March</item>

        <item name="4">April</item>
        <item name="5">May</item>
        <item name="6">June</item>

        <item name="7">July</item>
        <item name="8">August</item>
        <item name="9">September</item>

        <item name="10">October</item>
        <item name="11">November</item>
        <item name="12">December</item>
    </string-array>
    <string-array name="educationLevel">
        <item name="1">Primary</item>
        <item name="2">Secondary</item>
        <item name="3">Tertiary</item>

    </string-array>
    <string-array name="gender">
        <item name="1">Male</item>
        <item name="2">Female</item>
        <item name="3">Other</item>
    </string-array>
    <string-array name="answer">
        <item name="1">Yes</item>
        <item name="2">No</item>
    </string-array>
    <string name="phone_hint">Phone Number</string>
    <string name="submit">Submit Agreement</string>
    <string name="invalid_phone_number">Please enter a valid phone number</string>
    <string name="valid_phone_number">Valid phone numbers!</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="name">Name</string>
    <string name="no_data">No data</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="farmer_name">Farmer Name:</string>
    <string name="farmer_code">Farmer Code:</string>
    <string name="hire_labour">Did the farmer hire labour?</string>
    <string name="hire_labour_type">Labour type</string>
    <string name="monitoring_ao">Monitoring Adoption Observations</string>
    <string name="ao">AO</string>
    <string name="farmer_competence">Farmer Competence</string>
    <string name="reason_for_failure">Reason for Failure</string>
    <string name="currency">Currency:</string>
    <string name="fdp_status">FDP status</string>
    <string name="add_farmer">Add farmer</string>
    <string name="add_farmer_rational">Add new farmer data by clicking on the green button below</string>
    <string name="server_url_title">Server Url</string>
    <string name="http" translatable="false">https://</string>
    <string name="please_specify_the_name_and_the_url">Please specify the name and the url</string>
    <string name="print">print</string>
    <string name="choose_labor_option_rationale">To show table data, please select Labor option above.</string>
    <string name="no_changes_after_sybmission_rational">Please note that if you complete this form and sync your data, you will not be able to make any changes to this farmers data.</string>
</resources>