<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/list_item_section_text"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing_half"
        android:paddingTop="@dimen/spacing_normal"
        android:paddingRight="@dimen/spacing_normal"
        android:paddingBottom="@dimen/spacing_normal"
        android:text="@string/monitoring_ao"
        android:textAllCaps="true"
        android:textColor="?attr/colorAccent"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:background="@color/divider" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="?android:attr/scrollbarSize"
        android:paddingRight="?android:attr/scrollbarSize">


        <TextView
            android:id="@+id/field_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/ao"
            android:textAllCaps="true"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/text_size_tiny"
            android:textStyle="bold" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/farmer_competence"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/text_size_tiny"
            android:textStyle="bold"

            />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/reason_for_failure"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/text_size_tiny"
            android:textStyle="bold"


            />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/monitoringAOLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_half"
        android:orientation="vertical"></LinearLayout>


</LinearLayout>