<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/custom_toolbar" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_buttons"
        android:layout_below="@+id/toolbar_layout"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/place_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/empty_view_image"
                android:layout_width="@dimen/image_size_small"
                android:layout_height="@dimen/image_size_small"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:alpha="0.5"
                android:src="@drawable/purchase_order"

                />


            <TextView
                android:id="@+id/empty_view_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/spacing_quarter"
                android:gravity="center"
                android:text="@string/no_data"
                android:textColor="@color/text_black_87"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/empty_view_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/add_farmer_rational"


                />


        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_normal">


        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_weight="2"
            android:onClick="setBackListener"
            android:padding="@dimen/spacing_normal"
            android:text="@string/back"
            android:theme="@style/PrimaryButtonGrey"

            />


        <Button
            android:id="@+id/sync"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="@dimen/spacing_normal"
            android:text="@string/sync" />


        <Button
            android:id="@+id/add_farmer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_toRightOf="@id/sync"
            android:layout_weight="3"
            android:padding="@dimen/spacing_normal"
            android:text="@string/add_farmer" />

    </LinearLayout>

    <!-- bottom sheet layout -->
</RelativeLayout>